[FIX] HTML Structure for card

--- a/index.html
+++ b/index.html
@@ -24,18 +24,23 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-4">
-                    <div class="member bg-black d-flex text-white" style="height: 100px;">
-                        <div class="img-box" >
-                            <img src="./assets/img/male1.png" alt="" class="img-fluid" style="width: 100px;">
+                <div class="col-sm-12 col-md-6 col-lg-4 mb-2">
+                    <div class="card-member bg-black d-flex">
+                        <div class="img-box bg-primary">
+                            <img src="./assets/img/male1.png" alt="" class="img-fluid"  style="width: 70px;">
                         </div>
-                        <div class="info-box ms-2 d-flex flex-column justify-content-between">
-                            <h5 class="">Marco Bianchi</h5>
-                            <p class="">Designer</p>
-                            <p class="">marcobianchi@team.com</p>
+                        <div class="info-box text-white d-flex flex-column justify-content-between ms-2">
+                            <div class="row d-flex flex-column justify-content-around mb-2">
+                                <div class="name">Mario Bianchi</div>
+                                <div class="role">Designer</div>
+                            </div>
+                            <div class="row">
+                                <div class="email">mariobianchi@team.com</div>
+                            </div>
                         </div>
-                    </div>
-                </div>
+                    </div>        
+                </div> 
+                
             </div>
         </div>
     </div>
