[FINAL] Insert member with form

--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                           </div>
                           <div class="col-sm-12 col-md-6 col-lg-4">
                             <label for="role" class="form-label">Role</label>
-                            <select class="form-select" aria-label="Default select example">
+                            <select class="form-select" id="role">
                                 <option selected>Scegli ruolo</option>
-                                <option value="designer">Designer</option>
-                                <option value="data analyst">Data Analyst</option>
+                                <option value="Designer">Designer</option>
+                                <option value="Data Analyst">Data Analyst</option>
                                 <option value="Marketing">Mareketing</option>
                               </select>                          </div>
                           <div class="col-sm-12 col-md-6 col-lg-4">
                             <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="name" placeholder="Indirizzo email del nuovo membro">
+                            <input type="email" class="form-control" id="email" placeholder="Indirizzo email del nuovo membro">
                           </div>
                           <div class="col-sm-12 col-md-6 col-lg-4">
                             <label for="image" class="form-label">Image</label>
